# wow-inventory-sync

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: accounts.rs  actions.rs  file_notifier.rs  main.rs
