[package]
name = "wow-inventory-sync"
version = "0.2.0"
edition = "2021"

[dependencies]
mlua = {version = "0.9.9", features = ["lua53", "serialize"]}
serde-lua-table = { git = "https://github.com/Nerixyz/serde-lua-table.git", tag = "v0.1.2" }
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
notify = "6.1.1"
tokio = { version = "1.38.0", features = ["full"] }
env_logger = "0.10.2"
log = "0.4.22"
clap = { version = "4.5.9", features = ["cargo"] }
